--- a/styleErr.css
+++ b/styleErr.css
@@ -91,7 +91,7 @@
 	bottom: 0;
 	width: 100%;
 	height: 20px;
-	background: url(../images/grass.png);
+	background: url(grass.png);
 	background-position: bottom;
 	animation: animateGrass 0.2s linear infinite;
 }
